# rpn

./: .travis.yml  CMakeLists.txt  Makefile  README.md  machine.cpp  printerrorhandler.cpp  printerrorhandler.h  rpn.y  stacktype.h  stringstacktype.cpp  stringstacktype.h
.github/workflows/: ci.yml
include/: bifun.h  biop.h  display.h  doublestacktype.h  errorhandler.h  machine.h  printerrorhandler.h  rpn.h  stringstacktype.h  ufun.h  uop.h
src/: doublestacktype.cpp  machine.cpp  main.cpp  printerrorhandler.cpp  rpn.y  stringstacktype.cpp  tokens.l
test/: bifuntest.cpp  bioptest.cpp  machinetest.cpp  ufuntest.cpp  uoptest.cpp
